# FPV_VR_OS

./: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
FPV_VR/app/: CMakeLists.txt  build.gradle  google-services.json
FPV_VR/app/libs/google/gvr/: gvr.h  gvr_audio.h  gvr_audio_surround.h  gvr_controller.h  gvr_gesture.h
FPV_VR/app/libs/qcom/qspower/: config.h  devices.h  devicetypes.hh  power.h  power.hh  types.h
FPV_VR/app/libs/qcom/symphony/: affinity.h  affinity.hh  alignedallocator.hh  barrier.hh  bounded_buffer.hh  bounded_lfqueue.hh  buffer.hh  bufferiterator.hh  buffermode.hh  condition_variable.hh  cpukernel.hh  devicetypes.hh  exceptions.hh  gpukernel.hh  group.hh  groupptr.hh  hexagonkernel.hh  index.hh  kernel.hh  lfqueue.hh  memregion.hh  mutex.hh  patterns.hh  pdivide_and_conquer.hh  pfor_each.hh  pipeline.hh  pipelinedata.hh  pointkernel.hh  power.hh  preduce.hh  pscan.hh  psort.hh  ptransform.hh  range.hh  runtime.hh  schedulerstorage.hh  scopedstorage.hh  symphony.h  task.hh  taskfactory.hh  (+6 more)
FPV_VR/app/libs/qcom/symphony/internal/: attr.hh  gpucustomkernellaunch.hh  runtime.hh
FPV_VR/app/libs/qcom/symphony/power/: devices.h  power.h  types.h
FPV_VR/app/release/: output.json
FPV_VR/app/src/main/: AndroidManifest.xml
FPV_VR/app/src/main/cpp/: SettingsN.cpp  SettingsN.h
FPV_VR/app/src/main/cpp/GLPrograms/: GLRenderColor.cpp  GLRenderColor.h  GLRenderGeometry.cpp  GLRenderGeometry.h  GLRenderLine.cpp  GLRenderLine.h  GLRenderText.cpp  GLRenderText.h  GLRenderTexture.cpp  GLRenderTexture.h  GLRenderTextureExternal.cpp  GLRenderTextureExternal.h  GLTextObj.cpp  GLTextObj.h  GeneralInfo
FPV_VR/app/src/main/cpp/GLRenderer/: GLRMono.cpp  GLRStereoDaydream.h  GLRStereoNormal.cpp  GLRStereoNormal.h  GLRStereoSuperSync.h  GLRSuperSync.cpp  GLRSuperSync.h  GLRendererMono.cpp  GLRendererMono.h  GLRendererStereo.cpp  GLRendererStereo.h  IRendererEGL14.h
FPV_VR/app/src/main/cpp/Helper/: CPUPriorities.h  Extensions.h  GLHelper.h  GeometryHelper.h  StringHelper.h  Time.h
FPV_VR/app/src/main/cpp/Network/: UDPReceiver.cpp  UDPReceiver.h
FPV_VR/app/src/main/cpp/OSD/: CompasLadder.cpp  CompasLadder.h  HeightLadder.cpp  HeightLadder.h  ModelRollPitch.cpp  ModelRollPitch.h  OSDRenderer.cpp  OSDRenderer.h  TextElements.cpp  TextElements.h
FPV_VR/app/src/main/cpp/Other/: Chronometer.cpp  Chronometer.h  FBRManager.cpp  FBRManager.h  FPSCalculator.cpp  FPSCalculator.h  FrameCPUChronometer.cpp  FrameCPUChronometer.h  HeadTrackerExtended.cpp  HeadTrackerExtended.h  TestReceiverN.cpp
FPV_VR/app/src/main/cpp/Telemetry/: TelemetryReceiver.cpp  TelemetryReceiver.h
FPV_VR/app/src/main/cpp/VRSettings/: SettingsVR.cpp  SettingsVR.h
FPV_VR/app/src/main/cpp/Video/: LowLagDecoder.cpp  LowLagDecoder.h  VideoPlayerN.cpp  VideoRenderer.cpp  VideoRenderer.h
FPV_VR/app/src/main/res/layout/: activity_connect.xml  activity_first_startup.xml  activity_front_buffer_tester.xml  activity_hardware_tester.xml  activity_main.xml  activity_mono_vid_osd.xml  activity_mono_video.xml  connect_grfile_fragment.xml  connect_manually_fragment.xml  fragment_collection_object.xml  my_ezwb_fragment.xml  my_grfile_fragment.xml  my_manually_fragment.xml  my_testfile_fragment.xml  spinner_white.xml
FPV_VR/app/src/main/res/menu/: toolbar_spinner_menu.xml
FPV_VR/app/src/main/res/values/: alertdialogstyle.xml  array.xml  colors.xml  pref_developer_ids.xml  settingsIDs.xml  strings.xml  styles.xml
FPV_VR/app/src/main/res/xml/: pref_connect.xml  pref_developer.xml  pref_osd_style.xml  pref_static.xml  preferences.xml
app/: .gitignore  CMakeLists.txt  build.gradle
app/libs/other/: CPUPriorities.hpp  SettingsN.hpp
app/src/androidTest/java/constantin/fpv_vr/: BigTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: mono.h264  paris_by_diego.h264  stereo.h264
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/GLRenderer/: GLRMono.cpp  GLRMono.h  GLRMono360.cpp  GLRMono360.h  GLRStereoDaydream.cpp  GLRStereoDaydream.h  GLRStereoNormal.cpp  GLRStereoNormal.h  GLRStereoSuperSync.cpp  GLRStereoSuperSync.h  GLRStereoVR.cpp  GLRStereoVR.h  IVideoFormatChanged.hpp  SceneStereoscopic.cpp  SceneStereoscopic.h  ZGLRStereoDaydream.h
app/src/main/cpp/Other/: IGLRenderer.cpp  IGLRenderer.h  IVideoFormatChanged.hpp  MatricesManager.cpp  MatricesManager.h  MatrixHelper.h  include_glm.h
app/src/main/cpp/Scene/General/: IDrawable.hpp  IPositionable.hpp  ITextHeight.h  IUpdateable.hpp  PositionDebug.hpp
app/src/main/cpp/Scene/OSD/: OSDRenderer.cpp  OSDRenderer.h
app/src/main/cpp/Scene/Settings/: IDOSD.hpp  SettingsOSDElements.cpp  SettingsOSDElements.h  SettingsOSDStyle.cpp
app/src/main/cpp/Scene/Video/: SurfaceTextureUpdate.hpp  VideoGeometryHelper.hpp  VideoModesHelper.hpp  VideoRenderer.cpp  VideoRenderer.h
app/src/main/cpp/VRSettings/: IDVR.hpp  SettingsVR.cpp  SettingsVR.h
app/src/main/java/constantin/fpv_vr/: ATestlayout.java  AirHeadTrackingSender.java  DJIConnectionA.java  MApplication.java  MVideoPlayer.java  MigrateFilesService.java  Permissions.java  Toaster.java  VerticalLadder.java  VideoTelemetryComponent.java
app/src/main/res/layout/: activity_amono360.xml  activity_connect.xml  activity_dji_connection.xml  activity_main.xml  activity_mono_gl_vid_osd.xml  activity_mono_vid_osd.xml  activity_mono_video.xml  activity_testlayout.xml  connect_dji_fragment.xml  connect_ezwb_fragment.xml  connect_grfile_fragment.xml  connect_manually_fragment.xml  connect_rtsp_fragment.xml  connect_testfile_fragment.xml  connect_uvc_fragment.xml  m_spinner_item.xml
app/src/main/res/menu/: main_toolbar_menu.xml  mono_with_360_video.xml  mono_without_360_video.xml  video_context_menu.xml  videovr_context_menu.xml
app/src/main/res/values/: array.xml  colors.xml  pref_developer_ids.xml  pref_osd_ids.xml  pref_vr_ids.xml  settingsIDs.xml  strings.xml
app/src/main/res/xml/: pref_connect.xml  pref_developer.xml  pref_ground_recording.xml  pref_lol.xml  pref_osd.xml  pref_osd_elements.xml  pref_osd_elements1.xml  pref_osd_style.xml  pref_vr_rendering.xml
(+484 files in other folders)
